# VisualizationModule

./: .gitignore  ButtonSideBar.qml  CMakeLists.txt  ImageView.qml  MyButton.qml  VideoViewer.qml  chartwidget.cpp  chartwidget.h  exportmanager.cpp  exportmanager.h  filehandler.cpp  filehandler.h  imageviewer.cpp  imageviewer.h  imageviewerwidget.cpp  imageviewerwidget.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mydelegate.cpp  mydelegate.h  mymodel.cpp  mymodel.h  mynewmodel.cpp  mynewmodel.h  myview.cpp  myview.h  statisticswidget.cpp  statisticswidget.h  visualiser.cpp  visualiser.h
